# mypa

./: .env.local  .gitignore  INTENT_DRIVEN_IMPLEMENTATION.md  Personal_Assistant_Agent_Implementation_Complete__2025-09-02T15-00-52.md  auto_workflow_doc.md  check_gmail_auth.py  logs.md  memory.md  prompt-1.md  prompt-2.md
backend/: .env.example  .env.local  .gitignore  AUTONOMOUS_ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  debug_oauth_state.py  debug_parameter_processor.py  docker-compose.yml  interactive_autonomous_chat.py  interactive_chat.py  interactive_intent_driven_chat.py  main.py  migrate_gmail_auth.py  pyproject.toml  simple_tool_test.py  test_autonomous_pa.py  test_autonomous_quality.py  test_calendar_auth.py  test_calendar_execution.py  test_google_calendar_fix.py  test_integration_fix.py  test_intent_driven_pa.py  test_logging_demo.py  test_memory_implementation.py  test_original_failing_case.py  test_parameter_processor.py  test_parameter_validation.py  test_persistence.py  test_personal_assistant.py  test_quasi_json.py  test_recurrence_fix.py  test_response_generation_fix.py  test_session_management.py  test_synthesis_routing.py  test_workspace_context.py  validate_implementation.py
backend/alembic/: env.py
backend/alembic/versions/: __init__.py
backend/app/: __init__.py  main.py
backend/app/agents/personal_assistant/: agent.py  config.py  context_resolver.py  flow.py  intent_nodes.py  memory.py  nodes.py  tool_entity_store.py  workspace_manager.py
backend/app/agents/personal_assistant/tools/: base.py  registry.py
backend/app/agents/personal_assistant/tools/builtin/: planning.py  system_prompt.py  tavily_search.py  virtual_fs.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  chatbot.py  google_oauth.py  health.py  personal_assistant.py  users.py
backend/app/core/: config.py  database.py  logging.py  security.py
backend/app/models/: __init__.py  agent.py  conversation.py  oauth_token.py  tool.py  user.py
backend/app/schemas/: auth.py  chatbot.py  personal_assistant.py  user.py
backend/app/services/: agent_session_manager.py  auth.py  chatbot.py  conversation_service.py  gmail_service.py  google_calendar_service.py  parameter_processor.py  personal_assistant.py  user.py
backend/app/utils/: exceptions.py
backend/baml_src/: clients.baml  generators.baml  intent_driven_assistant.baml  personal_assistant.baml  resume.baml  tao.baml
backend/chatbot_core/: README.md  flow.py  main.py  nodes.py  requirements.txt
backend/docs/: FRONTEND_ENHANCEMENTS.md  GOOGLE_CALENDAR_RECURRENCE_FIX.md  IMPLEMENTATION_SUMMARY.md  SESSION_MANAGEMENT_IMPLEMENTATION.md  agent_architecture_and_google_calendar_integration.md  building agentic systems.md  personal_assistant_api_design.md  personal_assistant_implementation_plan.md  personal_assistant_task_breakdown.md  response0logs.md  tool_metadata_system.md
backend/scripts/: init.sql
backend/static/: chatbot-test.html
backend/tests/: __init__.py  conftest.py  test_conversation_memory.py
backend/tests/test_api/: test_chatbot.py  test_health.py
backend/tests/test_services/: test_user_service.py
backend/utils/: __init__.py  baml_utils.py
(+4 files in other folders)
