[project]
name = "backend"
version = "0.1.0"
description = "Professional FastAPI backend with modern architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # FastAPI and web framework
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "gunicorn>=21.2.0",
    # Database and ORM
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "asyncpg>=0.29.0", # PostgreSQL async driver
    "psycopg2-binary>=2.9.9", # PostgreSQL sync driver
    # Authentication and Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    # Validation and serialization
    "pydantic>=2.11.7",
    "pydantic-settings>=2.0.3",
    "email-validator>=2.0.0", # For EmailStr validation
    # HTTP client and utilities
    "httpx>=0.25.2",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    # Existing dependencies
    "aiolimiter>=1.2.1",
    "baml-py>=0.206.1",
    "pocketflow>=0.0.3",
    "tenacity>=9.1.2",
    "typing-extensions>=4.15.0",
    # Logging and monitoring
    "structlog>=23.2.0",
    "rich>=13.7.0",
    # CORS and middleware (CORS is built into FastAPI)
    # "python-cors>=1.7.0",  # Not needed - FastAPI has built-in CORS
    "aiosqlite>=0.21.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.2",  # For testing FastAPI

    # Code quality
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",

    # Development tools
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "baml_py.*",
    "pocketflow.*",
]
ignore_missing_imports = true
